[tool.poetry]
name = "seed-exporter"
version = "0.1.0"
description = "Export viable seeds from data generated with p2p-crawler"
authors = ["virtu <virtu@cryptic.to>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
seed-exporter = "seed_exporter.cli:main"
